396 implement observer pattern for bciblockinstance (#441)
* Implement ExecutionStatus enumeration to replace status strings across models and controllers.

- Refactored controllers: BCIActivityInstanceController, GoalSettingInstanceController, BehaviorChangeInterventionPhaseInstanceController.
- Refactored test classes to use ExecutionStatus.
- Updated ActivityInstance and related models to use ExecutionStatus (enum).
- Adjusted database schema for consistency (activity_instance_status length now matches ExecutionStatus values).
- Improved documentation annotations (JavaDoc updates).

* Add event handling for BCIBlockInstance events with ExecutionStatus checks

- Introduced handleBCIBlockInstanceEvents to process BCIBlockInstanceEvent based on ExecutionStatus and ChangeAspect.
- Updated BehaviorChangeInterventionBlockInstanceService to publish events conditionally during updates.
- Enhanced test coverage for event publishing and handling scenarios.

* Remove unused imports from BehaviorChangeInterventionBlockInstanceServiceTest